--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "namegen",
+  "name": "@creately/namegen",
   "version": "1.0.0",
   "description": "Generate a random, unique, heroku-like name for your app/project/server etc. e.g. \"resonant-silence\"",
   "main": "src/generator.js",
